--- a/static.hzshuangmei.com/css/m/xpmqb/mxpmqb.css
+++ b/static.hzshuangmei.com/css/m/xpmqb/mxpmqb.css
@@ -516,3 +516,13 @@ body {
     line-height: 0.5rem;
     color: #776971;
 }
+.m4al img {
+    width: 7.8rem;
+}
+.m4a4 img {
+    width: 7.775rem;
+}
+.m6zx img,
+.m8zx img {
+    width: 8.225rem;
+}
