--- a/static.hzshuangmei.com/css/m/longbijiage/style.css
+++ b/static.hzshuangmei.com/css/m/longbijiage/style.css
@@ -758,4 +758,10 @@ img {
 	margin-top:5px;
 	margin-left:10px;
 }
-/*# sourceMappingURL=style.css.map */
+.part8{
+  position: relative;
+}
+.tda{
+  position: absolute;top: 6.5rem;width: 6.4rem;left: 1.3rem;height: 3.1rem;
+}
+
