--- a/static.hzshuangmei.com/css/m/sgz/sgz.css
+++ b/static.hzshuangmei.com/css/m/sgz/sgz.css
@@ -18,56 +18,53 @@
 .m_16 img {
     width: 100%;
 }
-.banner {
-    margin-top: 1.05rem;
-}
 #container {
     width: 100%;
     margin: 0 auto;
     font-family: "微软雅黑";
-    font-size: 0.35rem;
+    font-size: .35rem;
     color: #788087;
 }
 .banner img {
     margin: 0 auto;
 }
 .text01 {
-    padding: 0 0.625rem;
+    padding: 0 .625rem;
 }
 .text01_1 h3 {
-    margin: 0.25rem 0.5rem;
-    font-size: 0.4rem;
-    line-height: 0.875rem;
+    margin: .25rem .5rem;
+    font-size: .4rem;
+    line-height: .875rem;
 }
 .text01_1 p {
-    padding: 0 0.5rem;
-    font-size: 0.35rem;
-    line-height: 0.75rem;
+    padding: 0 .5rem;
+    font-size: .35rem;
+    line-height: .75rem;
     color: #666;
 }
 .text01_1 span {
     color: #73c6ef;
 }
 .text01_2 {
-    margin-top: 0.5rem;
+    margin-top: .5rem;
 }
 .text01_2 p {
-    padding: 0 0.5rem;
-    font-size: 0.35rem;
-    line-height: 0.75rem;
+    padding: 0 .5rem;
+    font-size: .35rem;
+    line-height: .75rem;
     color: #666;
 }
 .text01_2 span {
-    margin: 0 0.5rem;
+    margin: 0 .5rem;
     color: #73c6ef;
 }
 .text01_2 h3 {
-    margin: 0 0.25rem;
-    font-size: 0.4rem;
-    line-height: 0.75rem;
+    margin: 0 .25rem;
+    font-size: .4rem;
+    line-height: .75rem;
 }
 .text02 {
-    margin: 0.45rem 0.25rem;
+    margin: .45rem .25rem;
 }
 .text02 img {
     float: left;
@@ -76,45 +73,45 @@
     clear: both;
 }
 .text02 p {
-    margin: 0 0.5rem;
-    line-height: 0.45rem;
+    margin: 0 .5rem;
+    line-height: .45rem;
 }
 .m_03 {
-    margin: 0.5rem 0 0.5rem 0;
+    margin: .5rem 0 .5rem 0;
 }
 .text03 {
-    padding: 0.25rem 0.625rem;
+    padding: .25rem .625rem;
 }
 .text03 h3 {
-    margin: 0 0.5rem;
-    font-size: 0.375rem;
-    line-height: 0.75rem;
+    margin: 0 .5rem;
+    font-size: .375rem;
+    line-height: .75rem;
     color: #4c80a9;
 }
 .text03 p {
-    margin: 0 0.5rem;
-    line-height: 0.75rem;
+    margin: 0 .5rem;
+    line-height: .75rem;
 }
 .text03_1,
 .text03_2 {
-    margin-top: 0.45rem;
+    margin-top: .45rem;
 }
 .text03_3 {
-    margin-top: 0.45rem;
-    margin-bottom: 0.45rem;
+    margin-top: .45rem;
+    margin-bottom: .45rem;
 }
 .m_09_t1 {
-    padding-left: 0.625rem;
+    padding-left: .625rem;
 }
 .m_09_list ul {
-    margin: 0.25rem 0.5rem;
+    margin: .25rem .5rem;
 }
 .m_09_list li {
     height: 1.25rem;
     padding-right: 1.375rem;
-    padding-left: 0.375rem;
-    margin-bottom: 0.375rem;
-    font-size: 0.375rem;
+    padding-left: .375rem;
+    margin-bottom: .375rem;
+    font-size: .375rem;
     font-weight: bold;
     line-height: 1.25rem;
     color: #fff;
@@ -125,16 +122,16 @@
     float: left;
 }
 .m_10 {
-    margin-left: 0.375rem;
+    margin-left: .375rem;
 }
 .m_11 {
-    padding-right: 0.5rem;
-    margin-top: 0.625rem;
-    margin-bottom: 0.625rem;
-    margin-left: 0.375rem;
+    padding-right: .5rem;
+    margin-top: .625rem;
+    margin-bottom: .625rem;
+    margin-left: .375rem;
 }
 .m_11 img {
-    margin-right: 0.25rem;
+    margin-right: .25rem;
 }
 .m_11_01,
 .m_11_02,
@@ -151,11 +148,11 @@
 .m_11_02,
 .m_11_03,
 .m_11_04 {
-    margin-top: 0.25rem;
+    margin-top: .25rem;
 }
 .m_12_t1 {
-    margin: 0.25rem 0.45rem;
-    line-height: 0.5rem;
+    margin: .25rem .45rem;
+    line-height: .5rem;
 }
 .m_14 {
     height: 11.25rem;
@@ -163,45 +160,45 @@
     background-size: 50%;
 }
 .m_14_t1 {
-    height: 0.875rem;
-    margin: 0 0.625rem;
+    height: .875rem;
+    margin: 0 .625rem;
     background: url(//img.hzshuangmei.com/m/sgz/images/border.jpg) no-repeat left bottom;
 }
 .m_14_t1 h2 {
     color: #4c80a9;
 }
 .m_14_t1 span {
-    font-size: 0.35rem;
+    font-size: .35rem;
     color: #666;
 }
 .m_14_t2 {
-    margin-left: 0.625rem;
+    margin-left: .625rem;
 }
 .m_14_t3 {
-    margin-top: 0.2rem;
-    margin-left: 0.25rem;
-    line-height: 0.625rem;
+    margin-top: .2rem;
+    margin-left: .25rem;
+    line-height: .625rem;
 }
 .m_14_t3 span {
     color: #86d8ff;
 }
 .m_14_t4 h4 {
-    margin: 0.125rem 0.25rem 0 0.625rem;
+    margin: .125rem .25rem 0 .625rem;
     color: #4c80a9;
 }
 .m_14_t4 p {
-    margin-right: 0.625rem;
-    margin-left: 0.625rem;
-    line-height: 0.625rem;
+    margin-right: .625rem;
+    margin-left: .625rem;
+    line-height: .625rem;
 }
 .m_14_t5 {
-    margin-left: 0.375rem;
+    margin-left: .375rem;
 }
 .m_17 {
-    margin-top: 0.25rem;
+    margin-top: .25rem;
 }
 .m_17 img {
-    width: 70%;
+    width: 7.525rem;
 }
 .footer {
     position: fixed;
@@ -209,10 +206,49 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    font-size: 0.4rem;
-    border: 0.025rem #e1e1e1 solid;
+    font-size: .4rem;
+    border: .025rem #e1e1e1 solid;
     background-color: #fafafa;
 }
 .padfoot {
     height: 1.825rem;
+}
+.m_14_t5 img {
+    width: 2.725rem;
+}
+.m_11_02 img,
+.m_11_03 img,
+.m_11_04 img {
+    width: 4.425rem;
+}
+.m_10_01 img,
+.m_10_02 img,
+.m_10_03 img {
+    width: 7.125rem;
+}
+.m_09 img {
+    width: 8rem;
+}
+.m_08 img {
+    width: 14.4rem;
+}
+.m_07 img {
+    width: 11.575rem;
+}
+.text02_1 img {
+    width: 1.275rem;
+}
+.text02_2 img {
+    width: 1.225rem;
+}
+.m_02 img,
+.m_03 img,
+.m_04 img,
+.m_08 img,
+.m_013 img,
+.m_016 img {
+    width: 14.4rem;
+}
+.content > div {
+    width: 16rem;
 }
