--- a/static.hzshuangmei.com/css/pc/bnsqflw/flw.css
+++ b/static.hzshuangmei.com/css/pc/bnsqflw/flw.css
@@ -59,13 +59,13 @@ body{
     text-align: center;
     position: relative;
 }
-.m1flw1 :nth-child(2),.m1flw1{
-    width: 322px;
-}
-.m1flw1 :nth-child(1){
-    width: 99px;
-    margin-bottom: 29px;
-}
+/*.m1flw1 :nth-child(2),.m1flw1{*/
+    /*width: 322px;*/
+/*}*/
+/*.m1flw1 :nth-child(1){*/
+    /*width: 99px;*/
+    /*margin-bottom: 29px;*/
+/*}*/
 .m1flw2 :nth-child(2),.m1flw2{
     width: 381px;
 }
@@ -119,7 +119,7 @@ body{
     left: 73px;
 }
 .m1con2{
-    background: url("./images/m1bg.jpg") no-repeat center;
+    background: url("//img.hzshuangmei.com/pc/bnsqflw/images/m1bg.jpg") no-repeat center;
     height: 1803px;
     padding-top: 1px;
 }
@@ -169,7 +169,7 @@ body{
     margin: 0 11px 22px;
 }
 .m3{
-    background: url("./images/m3bg.jpg") no-repeat center;
+    background: url("//img.hzshuangmei.com/pc/bnsqflw/images/m3bg.jpg") no-repeat center;
     height: 1500px;
 }
 .m2zx{
@@ -296,7 +296,7 @@ body{
     width: 538px;
 }
 .m5{
-    background: url("./images/m5bg.jpg") no-repeat center;
+    background: url("//img.hzshuangmei.com/pc/bnsqflw/images/m5bg.jpg") no-repeat center;
     height: 1828px;
 }
 .m5tit{
@@ -322,13 +322,13 @@ body{
     display: block;
 }
 .m5lzk{
-    background: url("./images/lzk.png") no-repeat center;
+    background: url("//img.hzshuangmei.com/pc/bnsqflw/images/lzk.png") no-repeat center;
 }
 .m5ght{
     background: url("images/ght.png") no-repeat center;
 }
 .m5zhz{
-    background: url("./images/zzh.png") no-repeat center;
+    background: url("//img.hzshuangmei.com/pc/bnsqflw/images/zzh.png") no-repeat center;
 }
 .m5zj>div h4{
     color: #0089b4;
@@ -381,4 +381,11 @@ body{
 }
 .m5jh>div:nth-child(2){
     margin: 0 3px;
+}
+.m1flw1img1{
+    width: 99px;
+    margin-bottom: 29px;
+}
+.m1flw1img2.m1flw1{
+    width: 322px;
 }
