--- a/static.hzshuangmei.com/css/pc/bnsqflw/flw.css
+++ b/static.hzshuangmei.com/css/pc/bnsqflw/flw.css
@@ -175,7 +175,7 @@ body{
 .m2zx{
     width: 399px;
     position: absolute;
-    bottom: 0;
+    bottom: -3px;
     left: 75px;
     z-index: 2;
 }
@@ -325,7 +325,7 @@ body{
     background: url("//img.hzshuangmei.com/pc/bnsqflw/images/lzk.png") no-repeat center;
 }
 .m5ght{
-    background: url("images/ght.png") no-repeat center;
+    background: url("//img.hzshuangmei.com/pc/bnsqflw/images/ght.png") no-repeat center;
 }
 .m5zhz{
     background: url("//img.hzshuangmei.com/pc/bnsqflw/images/zzh.png") no-repeat center;
