--- a/static.hzshuangmei.com/css/m/bnsqflw/flw.css
+++ b/static.hzshuangmei.com/css/m/bnsqflw/flw.css
@@ -20,8 +20,8 @@ body {
 }
 .yinshen {
     position: absolute;
-    width: 0.02133333rem;
-    height: 0.02133333rem;
+    width: .02133333rem;
+    height: .02133333rem;
     padding: 0;
     margin: -0.02133333rem;
     overflow: hidden;
@@ -44,7 +44,7 @@ body {
 .m7 {
     position: relative;
     width: 16rem;
-    padding-top: 0.02133333rem;
+    padding-top: .02133333rem;
     margin: auto;
 }
 .banner img {
@@ -57,8 +57,9 @@ body {
     background-size: 16rem 21.61066667rem;
 }
 .m1tit {
+    width: 11.456rem;
     margin-top: 1.81333333rem;
-    margin-bottom: 0.98133333rem;
+    margin-bottom: .98133333rem;
 }
 .m1flw {
     position: relative;
@@ -68,30 +69,30 @@ body {
 }
 .m1flw span {
     position: absolute;
-    font-size: 0.512rem;
+    font-size: .512rem;
     color: #fff;
 }
 .m1flw p {
     position: absolute;
-    font-size: 0.42666667rem;
-    line-height: 0.512rem;
+    font-size: .42666667rem;
+    line-height: .512rem;
     color: #fefefe;
 }
 .m1flw1 span {
     top: 4.8rem;
-    left: 0.46933333rem;
+    left: .46933333rem;
 }
 .m1flw1 p {
     top: 5.58933333rem;
-    left: 0.64rem;
+    left: .64rem;
 }
 .m1flw2 span {
     top: 5.58933333rem;
-    left: 0.832rem;
+    left: .832rem;
 }
 .m1flw2 p {
     top: 6.37866667rem;
-    left: 0.46933333rem;
+    left: .46933333rem;
 }
 .m1flw3 span {
     top: 6.464rem;
@@ -99,22 +100,22 @@ body {
 }
 .m1flw3 p {
     top: 7.25333333rem;
-    left: 0.21333333rem;
+    left: .21333333rem;
 }
 .m1flw1 .m1f {
     width: 1.408rem;
-    margin-bottom: 0.36266667rem;
+    margin-bottom: .36266667rem;
 }
 .m1flw1 .m1al,
 .m1flw1 {
     width: 4.52266667rem;
 }
 .m1flw2 {
-    margin: 0 0.17066667rem;
+    margin: 0 .17066667rem;
 }
 .m1flw2 .m1f {
     width: 1.74933333rem;
-    margin-bottom: 0.27733333rem;
+    margin-bottom: .27733333rem;
 }
 .m1flw2 .m1al,
 .m1flw2 {
@@ -122,7 +123,7 @@ body {
 }
 .m1flw3 .m1f {
     width: 4.416rem;
-    margin-bottom: 0.21333333rem;
+    margin-bottom: .21333333rem;
 }
 .m1flw3 .m1al,
 .m1flw3 {
@@ -131,15 +132,15 @@ body {
 .m1p1 {
     width: 13.312rem;
     margin: 6.93333333rem auto 0;
-    font-size: 0.42666667rem;
-    line-height: 0.64rem;
+    font-size: .42666667rem;
+    line-height: .64rem;
     text-align: left;
-    text-indent: 0.85333333rem;
+    text-indent: .85333333rem;
     color: #4182c4;
 }
 .m1img7 {
     width: 12.94933333rem;
-    margin-top: 0.256rem;
+    margin-top: .256rem;
 }
 .m1zx {
     width: 10.79466667rem;
@@ -154,26 +155,26 @@ body {
     margin-top: 1.45066667rem;
 }
 .m2p1 {
-    margin-top: 0.10666667rem;
-    font-size: 0.512rem;
-    line-height: 0.512rem;
+    margin-top: .10666667rem;
+    font-size: .512rem;
+    line-height: .512rem;
     color: #2a2742;
 }
 .m2al {
     width: 15.872rem;
     height: 13.73866667rem;
-    padding-top: 0.128rem;
+    padding-top: .128rem;
     margin: 1.00266667rem auto 0;
-    border-radius: 0.21333333rem;
+    border-radius: .21333333rem;
     background-color: #7edfff;
 }
 .m2al > img {
     width: 7.72266667rem;
-    margin-bottom: 0.27733333rem;
+    margin-bottom: .27733333rem;
 }
 .m2al > :nth-child(1),
 .m2al > :nth-child(3) {
-    margin-right: 0.27733333rem;
+    margin-right: .27733333rem;
 }
 .m2al > :last-child {
     width: 9.83466667rem;
@@ -183,7 +184,7 @@ body {
 .m2 a {
     position: absolute;
     bottom: 1.83466667rem;
-    left: 0.66133333rem;
+    left: .66133333rem;
 }
 .m2 a img {
     width: 6.25066667rem;
@@ -198,8 +199,8 @@ body {
     width: 5.80266667rem;
     margin-top: 4.18133333rem;
     margin-left: 9.45066667rem;
-    font-size: 0.512rem;
-    line-height: 0.768rem;
+    font-size: .512rem;
+    line-height: .768rem;
     text-align: left;
     color: #0089b4;
 }
@@ -209,7 +210,10 @@ body {
 }
 .m3 a img {
     width: 8.55466667rem;
-    margin-top: 0.53333333rem;
+    margin-top: .53333333rem;
+}
+.m3tit {
+    width: 12.39466667rem;
 }
 .m4 {
     padding-bottom: 1.024rem;
@@ -224,11 +228,11 @@ body {
     display: inline-block;
     width: 3.81866667rem;
     height: 6.86933333rem;
-    margin-top: 0.93866667rem;
-    margin-right: 0.17066667rem;
+    margin-top: .93866667rem;
+    margin-right: .17066667rem;
     overflow: hidden;
     vertical-align: top;
-    border-radius: 0.42666667rem;
+    border-radius: .42666667rem;
     background-color: #fff;
 }
 .m4ys:last-child {
@@ -244,17 +248,17 @@ body {
 }
 .m4ys div span {
     display: block;
-    margin-top: 0.23466667rem;
-    margin-bottom: 0.21333333rem;
-    font-size: 0.512rem;
-    line-height: 0.512rem;
+    margin-top: .23466667rem;
+    margin-bottom: .21333333rem;
+    font-size: .512rem;
+    line-height: .512rem;
     color: #fff;
 }
 .m4ys div p {
     width: 3.456rem;
     margin: auto;
-    font-size: 0.384rem;
-    line-height: 0.512rem;
+    font-size: .384rem;
+    line-height: .512rem;
     color: #fff;
 }
 .m4zx img {
@@ -277,13 +281,13 @@ body {
     display: none;
     width: 15.65866667rem;
     height: 11.94666667rem;
-    padding-top: 0.02133333rem;
-    margin: 0.46933333rem auto 1.408rem;
+    padding-top: .02133333rem;
+    margin: .46933333rem auto 1.408rem;
 }
 .m5zj > div a {
     position: absolute;
     right: 2.64533333rem;
-    bottom: 0.10666667rem;
+    bottom: .10666667rem;
     width: 4.26666667rem;
     height: 2.66666667rem;
 }
@@ -305,22 +309,22 @@ body {
 .m5zj > div h4 {
     width: 3.41333333rem;
     margin: 4.56533333rem 0 0 7.57333333rem;
-    font-size: 0.64rem;
-    line-height: 0.64rem;
+    font-size: .64rem;
+    line-height: .64rem;
     color: #0089b4;
 }
 .m5zj > div span {
     display: block;
-    width: 0.68266667rem;
-    height: 0.04266667rem;
-    margin: 0.192rem 0 0.256rem 7.552rem;
+    width: .68266667rem;
+    height: .04266667rem;
+    margin: .192rem 0 .256rem 7.552rem;
     background-color: #0089b4;
 }
 .m5zj > div li {
-    margin-bottom: 0.21333333rem;
+    margin-bottom: .21333333rem;
     margin-left: 7.59466667rem;
-    font-size: 0.40533333rem;
-    line-height: 0.42666667rem;
+    font-size: .40533333rem;
+    line-height: .42666667rem;
     text-align: left;
     color: #0089b4;
 }
@@ -355,7 +359,7 @@ body {
     transform: skewX(25deg);
 }
 .m5jh > div:nth-child(2) {
-    margin: 0 0.08533333rem;
+    margin: 0 .08533333rem;
 }
 .m5zj > div:nth-child(2) h4 {
     margin: 4.26666667rem 0 0 7.68rem;
