--- a/static.hzshuangmei.com/css/m/bnsqflw/flw.css
+++ b/static.hzshuangmei.com/css/m/bnsqflw/flw.css
@@ -130,7 +130,7 @@ body {
     width: 5.78133333rem;
 }
 .m1p1 {
-    width: 13.312rem;
+    width: 13.44rem;
     margin: 6.93333333rem auto 0;
     font-size: .42666667rem;
     line-height: .64rem;
@@ -206,7 +206,7 @@ body {
 }
 .m3img1 {
     width: 16rem;
-    margin-top: 1.664rem;
+    margin-top: 1.38666667rem;
 }
 .m3 a img {
     width: 8.55466667rem;
@@ -257,7 +257,7 @@ body {
 .m4ys div p {
     width: 3.456rem;
     margin: auto;
-    font-size: .384rem;
+    font-size: 0.36266667rem;
     line-height: .512rem;
     color: #fff;
 }
