--- a/static.hzshuangmei.com/css/pc/rlbls/rlbls.css
+++ b/static.hzshuangmei.com/css/pc/rlbls/rlbls.css
@@ -988,7 +988,7 @@ a{
             position: absolute!important;
             left: 123px!important;
             top: 44px!important;
-            content: url(rlbls/images/part_Three_right.png)!important;
+            content: url(//img.hzshuangmei.com/pc/rlbls/part_Three_right.png)!important;
         }
         .swiper-container,.swiper-wrapper{
             width: 1300px!important;
