--- a/static.hzshuangmei.com/css/m/site.css
+++ b/static.hzshuangmei.com/css/m/site.css
@@ -36,7 +36,7 @@ hr { margin-top: 20px; margin-bottom: 20px; border: 0; border-top: 1px solid #ee
 .carousel-control .icon-prev, .carousel-control .icon-next { width: 20px; height: 20px; font-family: serif; line-height: 1; }
 .carousel-control .icon-prev:before { content: "\2039"; }
 .carousel-control .icon-next:before { content: "\203a"; }
-.carousel-indicators { position: absolute; bottom: -30px; left: 50%; z-index: 15; width: 60%; padding-left: 0; margin-left: -30%; list-style: none; text-align: center; }
+.carousel-indicators { position: absolute; bottom: -0.75rem; left: 50%; z-index: 15; width: 60%; padding-left: 0; margin-left: -30%; list-style: none; text-align: center; }
 .carousel-indicators li { display: inline-block; width: 10px; height: 10px; margin: 1px; cursor: pointer; text-indent: -999px; border: 1px solid #fff; border-radius: 10px; background-color: #000 \9; background-color: rgba(0, 0, 0, 0); }
 .carousel-indicators .active { width: 12px; height: 12px; margin: 0; background-color: #fff; }
 .carousel-caption { position: absolute; right: 15%; bottom: 20px; left: 15%; z-index: 10; padding-top: 20px; padding-bottom: 20px; text-align: center; color: #fff; text-shadow: 0 1px 2px rgba(0, 0, 0, .6); }
