博客网站站内搜索样式优化
博客网站站内搜索样式优化

--- a/static.hzshuangmei.com/css/xzh/style.css
+++ b/static.hzshuangmei.com/css/xzh/style.css
@@ -4493,3 +4493,7 @@ body {
     background: url(//img.hzshuangmei.com/pc/home.png+line.png+ns_02.png+ns_03.png+share_011.png.pagespeed.is.P2ekrn8epB.png) no-repeat center;
     background-position: 0 -16px;
 }
+.m1 {
+    width: 1200px;
+    margin: 0 auto;
+}
