隆鼻样式修改
隆鼻样式修改隆鼻样式修改

--- a/static.hzshuangmei.com/css/m/zslb/zslb.css
+++ b/static.hzshuangmei.com/css/m/zslb/zslb.css
@@ -393,7 +393,7 @@ body {
 }
 .m5 {
     height: 16.08533333rem;
-    background-color: #fcfcfc;
+    background-color: #f9f9f9;
 }
 .m5tit {
     margin: 1.42933333rem 0 0.768rem;
