--- a/static.hzshuangmei.com/css/pc/zslb/zslb.css
+++ b/static.hzshuangmei.com/css/pc/zslb/zslb.css
@@ -459,3 +459,9 @@ body{
     margin-left: -230px;
     width: 398px;
 }
+.m5zx{
+    width: 387px;
+    padding-left: 10px;
+    margin-top: 175px;
+    margin-left: 495px;
+}
