--- a/static.hzshuangmei.com/css/xzh/style.css
+++ b/static.hzshuangmei.com/css/xzh/style.css
@@ -4504,7 +4504,7 @@ body {
     text-indent: 2em;
     color: #727272;
 }
-.article-content p img {
+.article-content p img,.article-content img{
     display: block;
     width: 100%;
     margin: 1em auto;
